--- a/app/src/main/res/layout/cardview_history.xml
+++ b/app/src/main/res/layout/cardview_history.xml
@@ -1,58 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:elevation="0dp"
+    android:padding="10dp"
+    android:paddingStart="@dimen/margin_large"
+    android:paddingTop="@dimen/margin_xSmall"
+    android:paddingEnd="@dimen/margin_large"
+    app:cardCornerRadius="0dp">
 
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_margin="10dp"
-    android:elevation="10dp"
-    app:cardCornerRadius="13dp">
 
-    <LinearLayout
+    <ImageView
+        android:id="@+id/locationIcon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+        android:layout_marginStart="6dp"
+        android:layout_marginTop="@dimen/margin_xSmall"
+        android:layout_marginEnd="6dp"
+        android:src="@drawable/ic_pin" />
 
-            <ImageView
-                android:layout_width="15dp"
-                android:layout_height="15dp"
-                android:src="@drawable/ic_pin"
-                android:layout_marginTop="24dp"
-                android:layout_marginHorizontal="@dimen/text_margin"/>
+    <TextView
 
-            <TextView
-                android:id="@+id/address"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginVertical="@dimen/text_margin"
-                android:layout_marginRight="@dimen/text_margin"
-                android:textAppearance="?attr/textAppearanceListItem" />
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+        android:id="@+id/address"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_toEndOf="@id/locationIcon"
 
-            <ImageView
-                android:layout_width="13dp"
-                android:layout_height="13dp"
-                android:src="@drawable/ic_clock"
-                android:layout_marginTop="4dp"
-                android:layout_marginHorizontal="@dimen/text_margin"/>
+        android:padding="@dimen/margin_xSmall"
+        android:textAppearance="?attr/textAppearanceListItem"
+        tools:text="data" />
 
-            <TextView
-                android:id="@+id/time_interval"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="@dimen/text_margin"
-                android:layout_marginBottom="@dimen/text_margin"
-                android:textAppearance="?attr/textAppearanceListItem" />
-        </LinearLayout>
-    </LinearLayout>
+    <TextView
+        android:id="@+id/time_interval"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/address"
+        android:drawableStart="@drawable/ic_clock"
+        android:drawablePadding="@dimen/margin_large"
+        android:padding="@dimen/margin_xSmall"
+        android:textAppearance="?attr/textAppearanceListItem"
+        tools:text="data" />
 
-
-</androidx.cardview.widget.CardView>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_below="@id/time_interval"
+        android:layout_marginTop="@dimen/margin_xSmall"
+        android:alpha="0.2"
+        android:background="@color/black" />
+</RelativeLayout>
