--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,7 +5,81 @@
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorAccent">@color/colorSecondaryLight</item>
     </style>
 
+    <style name="SecondaryButtonStyle" parent="RegularN">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">48dp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:clickable">true</item>
+        <item name="android:focusable">true</item>
+        <item name="android:padding">@dimen/margin_2xSmall</item>
+        <item name="android:textColor">@color/color_secondary_btn_text</item>
+        <item name="android:background">@drawable/background_secondary_btn</item>
+    </style>
+
+    <style name="PrimaryButtonStyle" parent="RegularN">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">48dp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:clickable">true</item>
+        <item name="android:focusable">true</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:background">@drawable/background_primary_btn</item>
+    </style>
+
+
+    <style name="PrimaryDangerButtonStyle" parent="RegularN">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">48dp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:clickable">true</item>
+        <item name="android:focusable">true</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:background">@drawable/background_primary_danger_btn</item>
+    </style>
+
+    <style name="TertiaryButtonStyle" parent="RegularN">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">48dp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:clickable">true</item>
+        <item name="android:focusable">true</item>
+        <item name="android:padding">@dimen/margin_2xSmall</item>
+        <item name="android:textColor">@color/color_secondary_btn_text</item>
+        <item name="android:background">@drawable/background_tertiary_btn</item>
+    </style>
+
+
+    <style name="QuestionTitleStyle" parent="BoldXXL">
+        <item name="android:layout_marginTop">@dimen/margin_3xlarge</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
+
+    <style name="QuestionSubTitleStyle" parent="MediumXL">
+        <item name="android:layout_marginTop">@dimen/margin_xlarge</item>
+        <item name="android:textColor">@color/gray</item>
+    </style>
+
+    <style name="DisclaimerStyle" parent="RegularN">
+        <item name="android:textColor">@color/error</item>
+    </style>
+
+    <style name="QuestioniareStyle">
+        <item name="android:background">@color/white</item>
+    </style>
+
+
+    <style name="CheckBtnStyle">
+        <item name="android:background">@drawable/background_choice_btn</item>
+        <item name="android:textColor">@color/text_color_selector_event_radio_btn</item>
+        <item name="android:textAppearance">@style/BoldN</item>
+        <item name="android:paddingStart">@dimen/margin_xlarge</item>
+        <item name="android:paddingEnd">@dimen/margin_xlarge</item>
+        <item name="android:paddingTop">@dimen/margin_small</item>
+        <item name="android:paddingBottom">@dimen/margin_small</item>
+        <item name="android:minHeight">50dp</item>
+        <item name="android:button">@null</item>
+    </style>
 </resources>
