--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -41,14 +41,25 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/margin_2xSmall"
+                android:layout_marginEnd="@dimen/margin_2xlarge"
+                android:layout_toEndOf="@id/dateSelector"
+                android:gravity="center"
+                android:layout_alignBaseline="@id/dateSelector"
+                android:text="နေ့အတွက် တည်နေရာ ရာဇ၀င်များ"
+                style="@style/SemiBoldN"
+                />
 
             <TextView
                 android:id="@+id/dateSelector"
                 style="@style/SemiBoldN"
                 android:layout_width="140dp"
                 android:layout_height="wrap_content"
-
-                android:layout_centerHorizontal="true"
+                android:layout_alignParentStart="true"
+                android:layout_marginStart="@dimen/margin_2xlarge"
                 android:layout_marginTop="@dimen/margin_xlarge"
                 android:layout_marginBottom="@dimen/margin_small"
                 android:background="@drawable/background_primary_button"
