--- a/app/src/main/res/drawable/ic_home.xml
+++ b/app/src/main/res/drawable/ic_home.xml
@@ -6,6 +6,6 @@
   <path
       android:pathData="M14.9424,20.501h-9.71a2.225,2.225 0,0 1,-2.223 -2.223v-7.645a0.875,0.875 0,0 0,-0.873 -0.876h-1.293a0.341,0.341 0,0 1,-0.344 -0.344,0.3 0.3,0 0,1 0.1,-0.246l8.089,-8.089a1.918,1.918 0,0 1,1.376 -0.579,1.918 1.918,0 0,1 1.376,0.579l8.134,8.133a0.373,0.373 0,0 1,0.072 0.2,0.344 0.344,0 0,1 -0.359,0.344h-1.248a0.876,0.876 0,0 0,-0.874 0.876v7.645A2.226,2.226 0,0 1,14.9424 20.501ZM10.0732,11.2617a2.317,2.317 0,0 0,-2.313 2.315,2.316 2.316,0 0,0 2.313,2.313 2.317,2.317 0,0 0,2.315 -2.313A2.319,2.319 0,0 0,10.0732 11.2617Z"
       android:strokeWidth="0"
-      android:fillColor="#98979b"
-      android:strokeColor="#000000"/>
+      android:fillColor="@color/color_bottom_nav_tint"
+      android:strokeColor="@color/color_bottom_nav_tint"/>
 </vector>
