--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -51,6 +51,17 @@
         <item name="android:background">@drawable/background_tertiary_btn</item>
     </style>
 
+    <style name="TertiaryTransparentButtonStyle" parent="RegularN">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">48dp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:clickable">true</item>
+        <item name="android:focusable">true</item>
+        <item name="android:padding">@dimen/margin_2xSmall</item>
+        <item name="android:textColor">@color/color_secondary_btn_text</item>
+        <item name="android:background">@drawable/ripple_cardview_color_support_default</item>
+    </style>
+
 
     <style name="QuestionTitleStyle" parent="BoldXXL">
         <item name="android:layout_marginTop">@dimen/margin_3xlarge</item>
