--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -68,6 +68,12 @@
         <item name="android:textColor">@color/black</item>
     </style>
 
+    <style name="ToolBarTitleStyle" parent="BoldL">
+     <item name="android:gravity">center</item>
+        <item name="android:layout_gravity">center</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
     <style name="QuestionSubTitleStyle" parent="MediumXL">
         <item name="android:layout_marginTop">@dimen/margin_xlarge</item>
         <item name="android:textColor">@color/gray</item>
@@ -81,6 +87,16 @@
         <item name="android:background">@color/white</item>
     </style>
 
+    <style name="SheetDialog" parent="Theme.Design.Light.BottomSheetDialog">
+        <!--<item name="android:windowCloseOnTouchOutside">false</item>-->
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="android:colorBackground">@android:color/transparent</item>
+        <item name="android:backgroundDimEnabled">true</item>
+        <item name="android:backgroundDimAmount">0.3</item>
+        <item name="android:windowFrame">@null</item>
+        <item name="android:windowIsFloating">true</item>
+    </style>
 
     <style name="CheckBtnStyle">
         <item name="android:background">@drawable/background_choice_btn</item>
