--- a/app/src/main/res/layout/activity_self_examination.xml
+++ b/app/src/main/res/layout/activity_self_examination.xml
@@ -10,13 +10,13 @@
         android:id="@+id/fragmentContainerLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@id/previousBtn" />
+        android:layout_above="@id/nextBtn" />
 
 
     <TextView
         android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:text="Previous"
+        android:text="နောက်သို့"
         android:id="@+id/previousBtn"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
@@ -33,7 +33,7 @@
         android:layout_marginBottom="@dimen/margin_2xlarge"
         android:layout_marginTop="@dimen/margin_2xSmall"
         android:layout_marginEnd="@dimen/margin_2xlarge"
-        android:text="Next"
+        android:text="ရှေ့သို့"
         android:drawableEnd="@drawable/ic_chevron_right"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
