--- a/app/src/main/res/layout/fragment_result.xml
+++ b/app/src/main/res/layout/fragment_result.xml
@@ -52,7 +52,7 @@
             style="@style/PrimaryButtonStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Go Back To Home"
+            android:text="မူလစာမျက်နှာသို့ပြန်သွားမည်"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/subTitleTv"
             app:layout_constraintVertical_bias="0.5" />
@@ -62,7 +62,7 @@
             style="@style/PrimaryDangerButtonStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Contact To Doctors"
+            android:text="ဆရာဝန်များနှင့်ဆက်သွယ်မည်"
             android:layout_marginTop="@dimen/margin_large"
             android:layout_marginBottom="@dimen/margin_large"
             app:layout_constraintBottom_toBottomOf="parent"
