--- a/app/src/main/res/layout/fragment_step3.xml
+++ b/app/src/main/res/layout/fragment_step3.xml
@@ -10,7 +10,7 @@
         android:id="@+id/titleTv"
         app:layout_constraintTop_toTopOf="parent"
         style="@style/QuestionTitleStyle"
-        android:text="Are you having dry cough currently ? "
+        android:text="အခုလောလောဆယ်ချောင်းခြောက်ဆိုးနေပါလား?"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
     <TextView
@@ -18,7 +18,7 @@
         android:layout_below="@id/titleTv"
         app:layout_constraintTop_toBottomOf="@id/titleTv"
         style="@style/QuestionSubTitleStyle"
-        android:text="Please choose one"
+        android:text="ကျေးဇူးပြု၍ တစ်ခုရွေးပေးပါ"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
