--- a/app/src/main/res/layout/layout_settings_sheet_phone.xml
+++ b/app/src/main/res/layout/layout_settings_sheet_phone.xml
@@ -1,40 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:background="@drawable/background_backdrop"
     app:behavior_hideable="false"
     app:behavior_peekHeight="90dp"
     app:layout_behavior="@string/bottom_sheet_behavior">
+
     <View
         android:id="@+id/stopperView"
         android:layout_width="80dp"
-        android:layout_height="2dp"
-        android:layout_marginTop="@dimen/margin_xSmall"
+        android:layout_height="6dp"
+        android:clickable="true"
+        android:focusable="true"
         android:layout_centerHorizontal="true"
-        android:background="@color/gray"/>
+        android:layout_marginTop="@dimen/margin_large"
+        android:layout_marginBottom="@dimen/margin_xSmall"
+        android:background="@drawable/background_sheet_stopper_button" />
 
     <TextView
         android:id="@+id/titleTv"
+        style="@style/SemiBoldL"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        style="@style/SemiBoldL"
-        android:padding="@dimen/margin_3xSmall"
-        android:gravity="center"
-        android:textColor="@color/black"
+        android:layout_below="@id/stopperView"
         android:layout_marginTop="@dimen/margin_small"
+        android:gravity="center"
+        android:padding="@dimen/margin_3xSmall"
         android:text="ဖုန်းခေါ်ရန် နံပါတ်ရွေးပါ"
-        android:layout_below="@id/stopperView"/>
+        android:textColor="@color/black" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/settingsRv"
-        android:layout_marginTop="@dimen/margin_xSmall"
-        android:layout_below="@id/titleTv"
-        tools:itemCount="8"
-        tools:listitem="@layout/cardview_settings"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_below="@id/titleTv"
+        android:layout_marginTop="@dimen/margin_xSmall"
+        tools:itemCount="8"
+        tools:listitem="@layout/cardview_settings" />
 
 </RelativeLayout>
